# finer-onoff-simulation

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notes/2024-03-21/: 20181007151213-IF01.ipynb
